--- a/homeWorks/task1/index.html
+++ b/homeWorks/task1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <title>FrontBasic homeworks</title>
+    <title>FrontPROF homeworks task1</title>
 </head>
 
 <body>
