--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h3>Chose a homework:</h3>
             <div class="tasks">
                 <ul>
+                    <li class="task" data-item="1" data-path="task2">Task2</li>
                     <li class="task" data-item="0" data-path="task1">Task1</li>
                 </ul>
             </div>
@@ -37,12 +38,12 @@
 
 </html>
 <script>
-    const readMe = Array("Translate JS code to TS");
+    const readMe = Array("Translate JS code to TS", "Work with React props.");
        document.getElementById('footer').innerHTML = new Date().getFullYear();
     document.querySelectorAll('.task').forEach(el =>
         el.addEventListener('click', () => {
             let index = el.dataset.item;
-            document.getElementById("info").innerHTML = "<p>TASK " + (index + 1) + ":</p>";
+            document.getElementById("info").innerHTML = "<p>TASK " + (+index + 1) + ":</p>";
             document.getElementById("info").innerHTML += readMe[index];
             document.getElementById("go").style.visibility = "visible";
             document.getElementById("go").parentElement.setAttribute("href", "./homeWorks/" + el.dataset.path + "/index.html");
