--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h3>Chose a homework:</h3>
             <div class="tasks">
                 <ul>
+                    <li class="task" data-item="5" data-path="task6/dist">Task6</li>
                     <li class="task" data-item="4" data-path="task5/dist">Task5</li>
                     <li class="task" data-item="3" data-path="task4/dist">Task4</li>
                     <li class="task" data-item="2" data-path="task3">Task3</li>
@@ -43,7 +44,8 @@
 <script>
     const readMe = Array("Translate JS code to TS", "Work with React props.",
     "Work with React props, states, refs. Create Task manager app.",
-     "Rebuild Task manager app using Vibe - React");
+     "Rebuild Task manager app using Vibe - React","Add users to Task manager app",
+     "Practice with React TS");
        document.getElementById('footer').innerHTML = new Date().getFullYear();
     document.querySelectorAll('.task').forEach(el =>
         el.addEventListener('click', () => {
