--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
      "Rebuild Task manager app using Vibe - React","Add users to Task manager app",
      "Practice with React TS","Star Wars project - react",
     "Create app - add ingredients to a sandwich using redux.",
-    "Create app - Library manager"];
+    "Create app - Library manager");
        document.getElementById('footer').innerHTML = new Date().getFullYear();
     document.querySelectorAll('.task').forEach(el =>
         el.addEventListener('click', () => {
